[gd_scene load_steps=4 format=3 uid="uid://byks2xkbtbvk1"]

[ext_resource type="Script" path="res://Scripts/Weapons/paint_bomb_puddle.gd" id="1_1u7xc"]
[ext_resource type="Texture2D" uid="uid://cryi1cvqa3mer" path="res://Sprites/Weapons/PaintBombPuddle.png" id="1_825wh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vksbr"]
size = Vector2(44, 44.25)

[node name="Paint_Bomb_Puddle" type="Area2D"]
z_index = -1
collision_layer = 14
collision_mask = 14
script = ExtResource("1_1u7xc")
despawn_time = 6.1
has_movement = false
die_wait_time = 1.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_825wh")
region_enabled = true
region_rect = Rect2(0, 0, 46, 45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.125)
shape = SubResource("RectangleShape2D_vksbr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="die" from="." to="." method="_on_die"]
